--- a/src/template/index.html
+++ b/src/template/index.html
@@ -4,28 +4,40 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Confirm Account</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 
     <!-- font google -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;500;600&family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&family=Quicksand:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
 
     <style>
+      * {
+        font-family: sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: content-box;
+      }
+      .container {
+        display: flex;
+        justify-content: center;
+      }
       .background {
         background-color: #f4f3f9;
         width: 100%;
-        height: auto;
+      }
+
+      .text-center {
+        text-align: center;
       }
 
       .header {
         background-color: #216eee;
-        height: 20vh;
+        height: 40vh;
       }
 
       .card {
-        width: 50%;
+        background-color: white;
+        border: 1px solid rgb(183, 180, 180);
+        margin-top: 60px;
+        width: 100%;
+        padding: 30px;
       }
 
       .title {
@@ -40,8 +52,7 @@
       /* Buat desktop */
       @media (max-width: 1000px) {
         .card {
-          width: 90%;
-          height: auto;
+          width: 100%;
         }
 
         .title {
@@ -52,8 +63,8 @@
       /* Buat tablet */
       @media (max-width: 678px) {
         .card {
-          width: 100%;
-          height: auto;
+          margin: 0 auto;
+          width: 70%;
         }
 
         .card h2 {
@@ -77,14 +88,33 @@
           font-size: 12px;
           color: #818182;
         }
+
+        .card {
+          margin-top: 50px;
+        }
       }
 
       /* Buat mobile */
       @media (max-width: 320px) {
+        .card {
+          margin: 0 auto;
+          width: 70%;
+        }
+
         .footer {
           font-size: 12px;
           color: #818182;
         }
+      }
+      .btn {
+        background-color: #216eee;
+        padding: 20px;
+        color: white;
+        width: 200px;
+        font-size: 20px;
+        cursor: pointer;
+        border: 0px solid transparent;
+        border-radius: 15px;
       }
     </style>
   </head>
@@ -100,13 +130,46 @@
             <!-- Kolom baru -->
             <div class="col mb-4">
               <!-- Card -->
-              <div class="card m-auto" style="left: 0; right: 0; top: 60px">
+              <div class="card m-auto" style="margin-bottom: 50px">
                 <div class="card-body text-center">
-                  <h2 class="card-title text-center mb-4">Welcome!</h2>
-                  <p class="card-text text-start mb-4">We're excited to have you get started. First, you need to confirm your account. Just press the button below.</p>
-                  <button type="button" class="btn btn-primary rounded-1">Confirm Account</button>
-                  <p class="card-text text-start mb-4 mt-4">If you have any questions, just reply to this email - we're always happy to help out.</p>
-                  <p class="card-text text-start mt-4">The Contoso Team</p>
+                  <h2
+                    class="card-title text-center mb-4"
+                    style="margin-bottom: 50px"
+                  >
+                    Thanks For Sign Up
+                  </h2>
+                  <p
+                    class="card-text text-start mb-4"
+                    style="margin-bottom: 50px"
+                  >
+                    Hello,<br /><br />We're excited to have you get started.
+                    First, you need to confirm your account. Just press the
+                    button below.
+                  </p>
+                  <button
+                    type="button"
+                    class="btn btn-primary rounded-1"
+                    style="margin-bottom: 80px"
+                  >
+                    Confirm Account
+                  </button>
+                  <p style="margin-bottom: 40px">
+                    or Copy This Link Below :
+                    <b>http://localhost:3500/verify/${tokenSignUp}</b>
+                  </p>
+                  <p
+                    class="card-text text-start mb-4 mt-4"
+                    style="margin-bottom: 40px"
+                  >
+                    If you have any questions, just reply to this email - we're
+                    always happy to help out.
+                  </p>
+                  <p
+                    class="card-text text-start mt-4"
+                    style="font-weight: bold; margin-bottom: 100px"
+                  >
+                    The KontrakDana Team
+                  </p>
                 </div>
               </div>
               <!-- /Card -->
@@ -116,18 +179,8 @@
           <!-- /Baris baru -->
 
           <!-- Bagian bawah -->
-          <div class="row">
-            <div class="col-md-12 m-auto mt-5 title">
-              <a href="#" style="color: black; font-weight: 600">Dashboard</a>
-              <span>-</span>
-              <a href="#" style="color: black; font-weight: 600">Help</a>
-              <p class="mt-3">If these email get annaying, please feel free to<a href="#" class="ms-1" style="color: black; font-weight: 600">unsubcribe</a></p>
-              <p class="footer">Contoso - 1234 Main Street - Anywhere, MA - 56789</p>
-            </div>
-          </div>
         </div>
       </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
