--- a/src/views/verify.html
+++ b/src/views/verify.html
@@ -7,6 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Test</p>
+    <p>Succesfully Verification</p>
+
+    <script>
+      async function postVerification() {
+      
+      }
+      postVerification();
+    </script>
   </body>
 </html>
