--- a/src/views/verify.html
+++ b/src/views/verify.html
@@ -9,11 +9,6 @@
   <body>
     <p>Succesfully Verification</p>
 
-    <script>
-      async function postVerification() {
-      
-      }
-      postVerification();
-    </script>
+    <script></script>
   </body>
 </html>
